[gd_scene load_steps=17 format=2]

[ext_resource path="res://maps/chapter4/tilemap_snowy_lands.tres" type="TileSet" id=1]
[ext_resource path="res://areas/area_change_map.tscn" type="PackedScene" id=2]
[ext_resource path="res://sprites/sprsheet_patients.png" type="Texture" id=3]
[ext_resource path="res://dialogue/dialogue_holder.tscn" type="PackedScene" id=4]
[ext_resource path="res://dialogue/dialogue_system.tscn" type="PackedScene" id=5]
[ext_resource path="res://sprites/spr_patient4/spr_sad.png" type="Texture" id=6]
[ext_resource path="res://sprites/spr_mc/spr_concerned.png" type="Texture" id=7]
[ext_resource path="res://sprites/spr_mc/spr_neutral.png" type="Texture" id=8]
[ext_resource path="res://maps/chapter4/script/npc_patient4-graveyard.gd" type="Script" id=9]
[ext_resource path="res://effects/particle_snow.tres" type="Material" id=10]
[ext_resource path="res://entities/entity_mc/entity_mc.tscn" type="PackedScene" id=11]
[ext_resource path="res://sprites/spr_mc/spr_happy.png" type="Texture" id=13]
[ext_resource path="res://sprites/spr_patient4/spr_neutral.png" type="Texture" id=14]
[ext_resource path="res://sprites/spr_patient4/spr_happy.png" type="Texture" id=15]

[sub_resource type="CircleShape2D" id=1]
radius = 24.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 16 )

[node name="chapter4-3" type="Node2D"]

[node name="tilemap_snowy_lands" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
collision_layer = 8
collision_mask = 0
format = 1
tile_data = PoolIntArray( 0, 15, 65537, 1, 15, 65537, 2, 15, 65537, 3, 15, 65537, 4, 15, 65537, 5, 15, 65537, 6, 15, 65537, 7, 15, 65537, 8, 10, 0, 9, 7, 131073, 10, 7, 131073, 11, 7, 131073, 12, 7, 131073, 13, 7, 131073, 14, 7, 131073, 15, 7, 131073, 16, 7, 131073, 17, 10, 1, 18, 15, 65537, 19, 15, 65537, 20, 15, 65537, 21, 15, 65537, 22, 15, 65537, 23, 15, 65537, 24, 15, 65537, 25, 15, 65537, 26, 15, 65537, 27, 15, 65537, 65536, 15, 65537, 65537, 15, 65537, 65538, 15, 65537, 65539, 15, 65537, 65540, 15, 65537, 65541, 10, 0, 65542, 7, 131073, 65543, 7, 131073, 65544, 7, 131074, 65545, 9, 0, 65546, 9, 0, 65547, 9, 0, 65548, 9, 0, 65549, 9, 0, 65550, 9, 0, 65551, 9, 0, 65552, 9, 0, 65553, 7, 131072, 65554, 7, 131073, 65555, 7, 131073, 65556, 7, 131073, 65557, 7, 131073, 65558, 10, 1, 65559, 15, 65537, 65560, 15, 65537, 65561, 15, 65537, 65562, 15, 65537, 65563, 15, 65537, 131072, 5, 0, 131075, 15, 65537, 131076, 10, 0, 131077, 7, 131074, 131078, 9, 0, 131079, 9, 0, 131080, 9, 0, 131089, 9, 0, 131090, 9, 0, 131091, 9, 0, 131092, 9, 0, 131093, 9, 0, 131094, 7, 131072, 131095, 7, 131073, 131096, 7, 131073, 131097, 7, 131073, 131098, 10, 1, 131099, 15, 65537, 196608, 15, 65537, 196609, 15, 65537, 196610, 15, 65537, 196611, 15, 65537, 196612, 7, 65538, 196613, 9, 0, 196617, 15, 0, 196618, 15, 1, 196619, 15, 1, 196620, 15, 1, 196621, 15, 1, 196622, 15, 1, 196623, 15, 1, 196624, 15, 2, 196630, 9, 0, 196631, 9, 0, 196632, 9, 0, 196633, 9, 0, 196634, 7, 131072, 196635, 10, 1, 262144, 15, 65537, 262145, 15, 65537, 262146, 15, 65537, 262147, 10, 0, 262148, 7, 131074, 262150, 15, 0, 262151, 15, 1, 262152, 15, 1, 262153, 6, 0, 262156, 15, 65537, 262157, 16, 65537, 262158, 15, 65537, 262159, 15, 65537, 262160, 15, 65537, 262161, 15, 1, 262162, 15, 1, 262163, 15, 1, 262164, 15, 1, 262165, 15, 2, 262170, 9, 0, 262171, 7, 65536, 327680, 15, 65537, 327681, 15, 65537, 327682, 10, 0, 327683, 7, 131074, 327684, 9, 0, 327685, 15, 0, 327686, 15, 65537, 327687, 15, 65537, 327688, 15, 65537, 327689, 15, 65537, 327690, 15, 65537, 327691, 15, 65537, 327692, 15, 65537, 327693, 16, 65537, 327694, 15, 65537, 327695, 15, 65537, 327696, 6, 0, 327699, 15, 65537, 327700, 15, 65537, 327701, 15, 65537, 327702, 15, 1, 327703, 15, 1, 327704, 15, 1, 327705, 15, 2, 327707, 7, 65536, 393216, 15, 65537, 393217, 15, 65537, 393218, 7, 65538, 393219, 9, 0, 393221, 15, 65536, 393222, 15, 65537, 393223, 15, 65537, 393224, 17, 65537, 393225, 15, 65537, 393226, 15, 65537, 393227, 15, 65537, 393228, 15, 65537, 393229, 15, 65537, 393230, 15, 65537, 393231, 15, 65537, 393232, 15, 65537, 393233, 15, 65537, 393234, 15, 65537, 393235, 15, 65537, 393236, 16, 65537, 393237, 15, 65537, 393238, 15, 65537, 393239, 15, 65537, 393240, 15, 65537, 393241, 15, 65537, 393242, 15, 2, 393243, 7, 65536, 458752, 7, 131073, 458753, 7, 131073, 458754, 7, 131074, 458756, 15, 0, 458757, 15, 65537, 458758, 15, 65537, 458759, 15, 65537, 458760, 16, 65537, 458761, 15, 65537, 458762, 15, 65537, 458763, 15, 65537, 458764, 15, 65537, 458765, 15, 65537, 458766, 15, 65537, 458767, 15, 65537, 458768, 15, 65537, 458769, 15, 65537, 458770, 15, 65537, 458771, 15, 65537, 458772, 17, 65537, 458773, 15, 65537, 458774, 15, 65537, 458775, 5, 0, 458778, 15, 131074, 458779, 7, 65536, 524288, 16, 1, 524289, 16, 1, 524290, 16, 1, 524291, 16, 1, 524292, 16, 1, 524293, 16, 2, 524294, 15, 65537, 524295, 15, 65537, 524296, 15, 65537, 524297, 15, 65537, 524298, 15, 65537, 524299, 15, 65537, 524300, 15, 65537, 524301, 15, 65537, 524302, 15, 65537, 524303, 15, 65537, 524304, 16, 0, 524305, 16, 1, 524306, 16, 2, 524307, 15, 65537, 524308, 15, 65537, 524309, 15, 65537, 524310, 15, 65537, 524311, 15, 65537, 524312, 15, 65537, 524313, 15, 65538, 524314, 7, 0, 524315, 10, 65537, 589824, 16, 131073, 589825, 16, 131073, 589826, 16, 131073, 589827, 16, 131073, 589828, 16, 131073, 589829, 16, 131073, 589830, 16, 1, 589831, 16, 1, 589832, 16, 1, 589833, 16, 1, 589834, 16, 1, 589835, 16, 1, 589836, 16, 1, 589837, 16, 1, 589838, 16, 1, 589839, 16, 1, 589840, 16, 131073, 589841, 16, 131073, 589842, 16, 131073, 589843, 16, 1, 589844, 16, 1, 589845, 16, 1, 589846, 16, 1, 589847, 16, 1, 589848, 15, 65537, 589849, 15, 65538, 589850, 7, 65536, 589851, 15, 65537, 655360, 7, 1, 655361, 7, 1, 655362, 7, 2, 655363, 15, 65536, 655364, 15, 65537, 655365, 15, 65537, 655366, 15, 65537, 655367, 15, 65537, 655368, 15, 65537, 655369, 16, 131072, 655370, 16, 131073, 655371, 16, 131073, 655372, 16, 131073, 655373, 16, 131073, 655374, 16, 131073, 655375, 16, 131074, 655376, 15, 65537, 655377, 15, 65537, 655378, 15, 65537, 655379, 15, 65537, 655380, 15, 65537, 655381, 15, 65537, 655382, 15, 65537, 655383, 15, 65537, 655384, 15, 65537, 655385, 15, 65538, 655386, 7, 65536, 655387, 15, 65537, 720896, 15, 65537, 720897, 15, 65537, 720898, 7, 65538, 720899, 15, 65536, 720900, 15, 65537, 720901, 15, 65537, 720902, 15, 65537, 720903, 15, 65537, 720904, 15, 65537, 720905, 15, 65537, 720906, 15, 65537, 720907, 15, 65537, 720908, 15, 65537, 720909, 15, 65537, 720910, 15, 65537, 720911, 15, 65537, 720912, 15, 65537, 720913, 15, 65537, 720914, 15, 65537, 720915, 15, 65537, 720916, 15, 65537, 720917, 15, 65537, 720918, 15, 65537, 720919, 15, 65537, 720920, 15, 65537, 720921, 15, 65538, 720922, 7, 65536, 720923, 15, 65537, 786432, 15, 65537, 786433, 15, 65537, 786434, 7, 65538, 786435, 15, 65536, 786436, 15, 65537, 786437, 15, 65537, 786438, 15, 65537, 786439, 15, 65537, 786440, 15, 65537, 786441, 15, 65537, 786442, 15, 65537, 786443, 15, 65537, 786444, 15, 65537, 786445, 15, 65537, 786446, 15, 65537, 786447, 15, 65537, 786448, 15, 65537, 786449, 15, 65537, 786450, 15, 65537, 786451, 15, 65537, 786452, 15, 65537, 786453, 15, 65537, 786454, 15, 65537, 786455, 15, 65537, 786456, 15, 65537, 786457, 15, 65538, 786458, 7, 65536, 786459, 15, 65537, 851968, 15, 65537, 851969, 15, 65537, 851970, 7, 65538, 851971, 15, 131072, 851972, 15, 65537, 851973, 15, 65537, 851974, 16, 65537, 851975, 15, 65537, 851976, 15, 65537, 851977, 15, 65537, 851978, 15, 65537, 851979, 15, 65537, 851980, 15, 65537, 851981, 15, 65537, 851982, 15, 65537, 851983, 16, 65537, 851984, 15, 65537, 851985, 15, 65537, 851986, 15, 65537, 851987, 15, 65537, 851988, 15, 65537, 851989, 15, 65537, 851990, 15, 65537, 851991, 15, 65537, 851992, 15, 65537, 851993, 15, 65538, 851994, 7, 65536, 851995, 15, 65537, 917504, 15, 65537, 917505, 15, 65537, 917506, 10, 65536, 917507, 7, 2, 917508, 15, 65536, 917509, 15, 65537, 917510, 16, 65537, 917511, 15, 65537, 917512, 15, 65537, 917513, 15, 65537, 917514, 15, 65537, 917515, 15, 65537, 917516, 15, 65537, 917517, 15, 65537, 917518, 15, 65537, 917519, 17, 65537, 917520, 15, 65537, 917521, 15, 65537, 917522, 15, 65537, 917523, 15, 65537, 917524, 15, 65537, 917525, 15, 65537, 917526, 17, 65537, 917527, 15, 65537, 917528, 15, 65537, 917529, 15, 65538, 917530, 7, 65536, 917531, 15, 65537, 983040, 15, 65537, 983041, 15, 65537, 983042, 15, 65537, 983043, 7, 65538, 983044, 15, 65536, 983045, 15, 65537, 983046, 15, 65537, 983047, 15, 65537, 983048, 15, 65537, 983049, 15, 65537, 983050, 17, 65537, 983051, 15, 65537, 983052, 15, 65537, 983053, 15, 65537, 983054, 15, 65537, 983055, 15, 65537, 983056, 15, 65537, 983057, 15, 65537, 983058, 15, 65537, 983059, 15, 65537, 983060, 15, 65537, 983061, 15, 65537, 983062, 16, 65537, 983063, 15, 65537, 983064, 15, 65537, 983065, 15, 131074, 983066, 7, 65536, 983067, 15, 65537, 1048576, 15, 65537, 1048577, 15, 65537, 1048578, 15, 65537, 1048579, 7, 65538, 1048580, 15, 65536, 1048581, 5, 0, 1048584, 15, 65537, 1048585, 15, 65537, 1048586, 16, 65537, 1048587, 15, 65537, 1048588, 15, 65537, 1048589, 15, 65537, 1048590, 15, 65537, 1048591, 15, 65537, 1048592, 15, 65537, 1048593, 15, 65537, 1048594, 15, 65537, 1048595, 15, 65537, 1048596, 15, 65537, 1048597, 15, 65537, 1048598, 15, 65537, 1048599, 15, 65537, 1048600, 15, 65538, 1048601, 7, 0, 1048602, 10, 65537, 1048603, 15, 65537, 1114112, 15, 65537, 1114113, 15, 65537, 1114114, 15, 65537, 1114115, 7, 65538, 1114116, 15, 65536, 1114117, 15, 65537, 1114118, 15, 65537, 1114119, 15, 65537, 1114120, 15, 65537, 1114121, 15, 65537, 1114122, 15, 65537, 1114123, 15, 65537, 1114124, 15, 65537, 1114125, 15, 65537, 1114126, 15, 65537, 1114127, 15, 65537, 1114128, 15, 65537, 1114129, 15, 65537, 1114130, 15, 65537, 1114131, 15, 65537, 1114132, 17, 65537, 1114133, 15, 65537, 1114134, 15, 65537, 1114135, 15, 65537, 1114136, 15, 65538, 1114137, 7, 65536, 1114138, 15, 65537, 1114139, 15, 65537, 1179648, 15, 65537, 1179649, 15, 65537, 1179650, 15, 65537, 1179651, 7, 65538, 1179652, 15, 131072, 1179653, 15, 65537, 1179654, 15, 65537, 1179655, 6, 0, 1179658, 15, 65537, 1179659, 15, 65537, 1179660, 6, 0, 1179663, 15, 65537, 1179664, 15, 65537, 1179665, 15, 65537, 1179666, 15, 65537, 1179667, 15, 65537, 1179668, 16, 65537, 1179669, 6, 0, 1179672, 15, 131074, 1179673, 7, 65536, 1179674, 15, 65537, 1179675, 15, 65537, 1245184, 5, 0, 1245187, 10, 65536, 1245188, 7, 2, 1245189, 15, 131072, 1245190, 15, 65537, 1245191, 15, 65537, 1245192, 15, 65537, 1245193, 15, 65537, 1245194, 15, 65537, 1245195, 15, 65537, 1245196, 15, 65537, 1245197, 15, 65537, 1245198, 15, 65537, 1245199, 15, 65537, 1245200, 15, 65537, 1245201, 15, 65537, 1245202, 15, 65537, 1245203, 15, 65537, 1245204, 15, 65537, 1245205, 15, 65537, 1245206, 15, 131073, 1245207, 15, 131074, 1245208, 7, 0, 1245209, 10, 65537, 1245210, 15, 65537, 1245211, 15, 65537, 1310720, 15, 65537, 1310721, 15, 65537, 1310722, 15, 65537, 1310723, 15, 65537, 1310724, 10, 65536, 1310725, 7, 2, 1310726, 15, 131072, 1310727, 15, 131073, 1310728, 15, 131073, 1310729, 15, 131073, 1310730, 15, 131073, 1310731, 15, 131073, 1310732, 15, 131073, 1310733, 15, 65537, 1310734, 15, 65537, 1310735, 15, 65537, 1310736, 6, 0, 1310739, 15, 65537, 1310740, 15, 65537, 1310741, 15, 131074, 1310742, 7, 0, 1310743, 7, 1, 1310744, 10, 65537, 1310745, 15, 65537, 1310746, 15, 65537, 1310747, 15, 65537, 1376256, 15, 65537, 1376257, 15, 65537, 1376258, 15, 65537, 1376259, 15, 65537, 1376260, 15, 65537, 1376261, 10, 65536, 1376262, 7, 1, 1376263, 7, 1, 1376264, 7, 1, 1376265, 7, 1, 1376266, 7, 1, 1376267, 7, 1, 1376268, 7, 2, 1376269, 15, 131072, 1376270, 15, 131073, 1376271, 15, 131073, 1376272, 15, 131073, 1376273, 15, 131073, 1376274, 15, 131073, 1376275, 15, 131073, 1376276, 15, 131074, 1376277, 7, 0, 1376278, 10, 65537, 1376279, 15, 65537, 1376280, 15, 65537, 1376281, 15, 65537, 1376282, 6, 0, 1441792, 15, 65537, 1441793, 15, 65537, 1441794, 15, 65537, 1441795, 5, 0, 1441798, 15, 65537, 1441799, 15, 65537, 1441800, 15, 65537, 1441801, 5, 0, 1441804, 10, 65536, 1441805, 7, 1, 1441806, 7, 1, 1441807, 7, 1, 1441808, 7, 1, 1441809, 7, 1, 1441810, 7, 1, 1441811, 7, 1, 1441812, 7, 1, 1441813, 10, 65537, 1441814, 15, 65537, 1441815, 15, 65537, 1441816, 15, 65537, 1441817, 15, 65537, 1441818, 15, 65537, 1441819, 15, 65537, 1507328, 15, 65537, 1507329, 15, 65537, 1507330, 15, 65537, 1507331, 15, 65537, 1507332, 15, 65537, 1507333, 15, 65537, 1507334, 15, 65537, 1507335, 15, 65537, 1507336, 15, 65537, 1507337, 15, 65537, 1507338, 15, 65537, 1507339, 15, 65537, 1507340, 15, 65537, 1507341, 15, 65537, 1507342, 15, 65537, 1507343, 15, 65537, 1507344, 15, 65537, 1507345, 15, 65537, 1507346, 15, 65537, 1507347, 15, 65537, 1507348, 15, 65537, 1507349, 15, 65537, 1507350, 15, 65537, 1507351, 6, 0, 1507354, 15, 65537, 1507355, 15, 65537 )

[node name="tilemap_snowy_lands_decor" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
cell_y_sort = true
collision_layer = 8
collision_mask = 0
format = 1
tile_data = PoolIntArray( 131072, 0, 0, 196621, 19, 0, 262153, 1, 0, 327688, 19, 0, 327696, 1, 0, 327700, 19, 0, 458775, 0, 0, 786438, 19, 0, 786447, 19, 0, 851990, 19, 0, 917514, 19, 0, 1048581, 0, 0, 1048596, 19, 0, 1179655, 1, 0, 1179660, 1, 0, 1179669, 1, 0, 1245184, 0, 0, 1310736, 1, 0, 1376282, 1, 0, 1441795, 0, 0, 1441801, 0, 0, 1507351, 1, 0 )

[node name="npc_patient4" type="Area2D" parent="tilemap_snowy_lands_decor"]
position = Vector2( 232, 208 )
collision_layer = 0
script = ExtResource( 9 )
__meta__ = {
"_edit_group_": true
}
dialogue_transition = "res://maps/chapter4/chapter4-depression_dungeon.tscn"
appear_location = Vector2( 160, 848 )

[node name="spr_patient4" type="Sprite" parent="tilemap_snowy_lands_decor/npc_patient4"]
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 48, 0, 16, 16 )

[node name="col_patient4" type="CollisionShape2D" parent="tilemap_snowy_lands_decor/npc_patient4"]
shape = SubResource( 1 )

[node name="dialogue_system" parent="tilemap_snowy_lands_decor/npc_patient4" instance=ExtResource( 5 )]

[node name="nokey-2" parent="tilemap_snowy_lands_decor/npc_patient4/dialogue_system" instance=ExtResource( 4 )]
dialogue_lines = [ [ "Kamu tidak bisa seperti ini selamanya", "Semuanya harus pergi pada suatu saat", "AKU TAHU, TAPI MENGAPA MESTI SEKARANG", "...", "SEMUANYA ABU, AKU TIDAK BISA MERASAKAN WARNA LAGI", "Hey, maupun kamu telah kehilangan satu, kamu tidak boleh mengacuhkan satunya lagi", "Bagaimana dengan ibumu, apa yang akan terjadi jika dia kehilangan 'mu'", "AKU GAK TAU" ], [ "You can't stay like this for long", "Everybody has to go sooner or later", "I KNOW, BUT WHY IT MUST BE NOW!", "...", "EVERYTHING IS IN GRAYSCALE, I CAN'T FEEL COLOUR ANYMORE", "Hey, even if you have lost one, you can't ignore the other", "What about how she feels for you, what if she lost the 'you'", "I DON'T KNOW" ] ]
dialogue_picture_resource = [ ExtResource( 8 ), ExtResource( 7 ), ExtResource( 6 ), ExtResource( 8 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 6 ) ]
dialogue_command = "transition"

[node name="nokey-3" parent="tilemap_snowy_lands_decor/npc_patient4/dialogue_system" instance=ExtResource( 4 )]
dialogue_lines = [ [ "Aku tahu aku seharusnya tidak, tapi....", "Bersedih itu tidak apa-apa, tetapi untuk pergi ke dunia tanpa warna", "Itu bukan sesuatu yang bisa dianggap remeh", "Baiklah....", "Walaupun dia tidak ada di sini, dia selalu ada di hatimu", "Ini akan membuatnya sedih melihatmu seperti ini ", "Bantu dia, bersenanglah untuknya", "Oke" ], [ "I know that I shouldn't but still", "Being sad is okay, but going into that grayscale world", "It's not something to be taken lightly at", "Allright...", "Even if he's not here anymore. He'll always be in your heart", "It'll make him sad if you stay like this", "Do him a favour, be happy for him", "Okay" ] ]
dialogue_picture_resource = [ ExtResource( 6 ), ExtResource( 8 ), ExtResource( 7 ), ExtResource( 14 ), ExtResource( 8 ), ExtResource( 7 ), ExtResource( 13 ), ExtResource( 15 ) ]
dialogue_command = "next_level"

[node name="entity_mc" parent="tilemap_snowy_lands_decor" instance=ExtResource( 11 )]
position = Vector2( 200, 208 )

[node name="snow_particles" type="Particles2D" parent="tilemap_snowy_lands_decor/entity_mc"]
position = Vector2( 0, -136 )
amount = 200
lifetime = 3.0
process_material = ExtResource( 10 )

[node name="area_change_map" parent="." instance=ExtResource( 2 )]
position = Vector2( -8, 144 )
destination = "res://maps/chapter4/chapter4-2.tscn"
location = Vector2( 696, 272 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="area_change_map"]
shape = SubResource( 2 )
[connection signal="body_entered" from="tilemap_snowy_lands_decor/npc_patient4" to="tilemap_snowy_lands_decor/npc_patient4" method="_on_npc_patient4_body_entered"]
[connection signal="body_exited" from="tilemap_snowy_lands_decor/npc_patient4" to="tilemap_snowy_lands_decor/npc_patient4" method="_on_npc_patient4_body_exited"]
